--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="script.js" defer></script>
 	<link rel="stylesheet" href="style.css">
+	<link rel="shortcut icon" href="icon.png" type="image/x-icon">
 	<title>Tic Tac Toe</title>
 </head>
 <body>
