--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script src="script.js" defer></script>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="stylesheet" href="style.css">
 	<link rel="shortcut icon" href="icon.png" type="image/x-icon">
+	<script src="script.js" defer></script>
 	<title>Tic Tac Toe</title>
 </head>
 <body>
